# simple_note_taker

./: .gitignore  README.md  backup_cron.py  create_question.py  pyproject.toml
src/domain/: note.py
src/infra/: editor.py  editor_nvim.py  repo_notes.py
src/infra/adapters/: editor_nvim.py  repo_notes_os.py
src/infra/ports/: repo_notes.py
src/note_taker/: create_note.py
tests/: another_note_with_different_id.md  edited_note_with_my_editor.md  generated_by_template.md  note_with_id_impressed.md  note_with_tags.md  note_with_title.md  template_demo.md  test_note.py  test_take_note.py
tests/helpers/: dommie_repo.py  in_memo_repo.py  spy_editor.py
tests/infra/: test_neovim.py  test_repo_notes_os.py
