[tool.poetry]
name = "simple-note-taker"
version = "0.1.0"
description = ""
authors = ["jose <jose.s.contacto@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_note_taker"}]

[tool.poetry.dependencies]
python = "^3.11"
python-crontab = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
